--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "qrcode": "^1.5.3",
     "speakeasy": "^2.0.0"
