--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Your Name",
+  "author": "krishay",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
